# Impact_Nexus005

./: .coverage  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml.old  .pytest.ini  Dockerfile  Dockerfile-Test  Dockerfile-old  Dockerfile.gpu  Makefile  README.md  app  citric-earth-199400-29ca303c4b05.json  dev-docker-entrypoint.sh  dev.Dockerfile  docker-compose-gpu.yml  docker-compose-smart-evidence.yml  docker-compose.yml  docker-entrypoint-tests.sh  macbook_oskeychain.md  postgres-330510-458530c3ac03.json  project.yml  pyproject.toml  readme_suggestions.md  requirements.txt  resources.md  smart-evidence.Dockerfile
.dvc/: config
.github/workflow/: dvc-model-tests.yml  run-tests.yml
.github/workflows/: cml.yaml  linear_regression_test.yaml  perturbation_test.yaml  test.yaml  test_gpu.yaml
DeepChecks/: Caddyfile  docker-compose.yml  get_stats_from_data.py  test_run_stats_extraction.py
DeepChecks/Data/: tweet_emotion_properties.csv
Services/: db.sqlite3  manage.py
Services/DVC/: model_requirements.txt  models.dvc  readme.md  test.py  train.py
Services/services_app/: apps.py
Services/services_project/: asgi.py  db.sqlite3  settings.py  urls.py  wsgi.py
Services/services_scripts/: folder_optimisation.py  haystack_crawler.py  haystack_custom_pipeline.py  haystack_retrieval_custom_script.py  hybrid_retrieval.py  hybrid_retrieval_test.py  knowledge_base.py
Services/wandb/: latest-run
assets/: .gitattributes
assets/keywords_raw/: industries.txt
bash-scripts/: download_blink_models.sh
data/: core_1ff18bcc3ae673015b7d1266a8d63b68.tsv
notebooks/jupyternotebooks/: AnnotateConcepts.ipynb  Docker2Sage.ipynb
requirements/: common.txt  dev.txt
rest_api/: application.py  requirements.txt  schema.py
rest_api/controller/: esg_measure_insights.py  router.py  (+1 more)
scripts/: Keywords_scripts.py
test/: test_parquet_conversion.py
tests/: .coverage  _test_project_ner_demo_update.py  test_classifier.py  test_company_concept_extractor.py  test_knowledgebase.py  test_parquet_conversion.py
(+885 files in other folders)
